*  Converted to work with ici version 4