@@ -1,0 +1,44 @@
+/*
+ * $Id$
+ */
+
+/*
+ * UUID Variants
+ *
+ * UUIDs have a number of variants that identify their source.
+ * A UUID's variant may be determined with the uuid.variant()
+ * function which returns one of the following values:
+ *
+ * uuid.VARIANT_NCS - Apollo Domain Network Computing System
+ *
+ * uuid.VARIANT_DCE - X/Open Distributed Computing Environment
+ *
+ * uuid.VARIANT_MICROSOFT - Microsoft `GUID'
+ *
+ * uuid.VARIANT_OTHER - some other source
+ * 
+ * This --topic-- forms part of the --ici-uuid-- documentation.
+ */
+
+extern VARIANT_NCS = 0;
+extern VARIANT_DCE = 1;
+extern VARIANT_MICROSOFT = 2;
+extern VARIANT_OTHER = 3;
+
+
+/* 
+ * UUID Types
+ *
+ * UUIDs may be of differing types. The type of a UUID is
+ * identified by the following values:
+ *
+ * uuid.TYPE_TIME - a time-based UUID
+ *
+ * uuid.TYPE_DCE  - X/Open Distributed Computing Environment
+ *
+ * uuid.TYPE_NAME - a name-based UUID
+ *
+ * uuid.TYPE_RANDOM - a random UUID
+ *
+ * This --topic-- forms part of the --ici-uuid-- documentation.
+ */
