@@ -2,9 +2,8 @@ id1 := uuid.generate();
 id2 := uuid.generate();
 
 if (id1 == id2)
-     fail("equal uuids");
+     fail("generated equal uuids!");
 
-s := uuid.unparse(id1);
-id3 := uuid.parse(s);
-
-printf("%d\n", uuid.compare(id1, id3));
+id3 := uuid.parse(uuid.unparse(id1));
+if (id3 != id1 || !eq(id1, id3))
+    fail("parse/unparse failure");
