@@ -1,17 +1,38 @@
 /*
- * $Id: uuid.c,v 1.2 2000/10/13 10:23:23 atrn Exp $
+ * $Id: uuid.c,v 1.3 2003/01/27 11:15:34 atrn Exp $
  *
  * ICI UUID library interface. Placed in the PUBLIC DOMAIN, A.Newman, October 2000.
+ */
+
+/*
+ * The ICI `uuid' module provides facilities for creating and manipulating
+ * `Universal Unique Identifiers' or UUIDs. These are also known as
+ * `Globally Unique Identifiers' or GUIDs. UUIDs are 128-bit values
+ * calculated in a manner that provides a high probabiliity they are
+ * unique.
  *
+ * The `uuid' module provides a new type, uuid, that represents a UUID. UUIDs
+ * are atomic, two UUIDs with the same value are the same object, and are not
+ * modifiable in any way.  Being atomic equal UUIDs are both `==' and `eq',
+ * i.e. equal UUIDs have equal values and are the same object.
+ *
+ * The module sites atop libuuid written by Theodore Ts'o and included
+ * with the `e2fsprogs' source code distribution. This library is under
+ * the GNU Library General Public License and is included with most Linux
+ * distributions or is otherwise widely available.
+ *
+ * This --intro-- forms part of the --ici-uuid-- documentation.
  */
 
 #include <ici.h>
 #include <uuid/uuid.h>
 
+#define UUID_PRIME 0x000f4c07
+
 typedef struct
 {
     object_t	o_head;
-    uuid_t	u_uid;
+    uuid_t	u_uuid;
 }
 ici_uuid_t;
 
@@ -30,81 +51,67 @@ free_uuid(object_t *o)
     ici_tfree(o, ici_uuid_t);
 }
 
+#define isuuid(o) (ici_typeof(o) == &ici_uuid_type)
+#define uuidof(o) ((ici_uuid_t *)(o))
+
+static unsigned long
+hash_uuid(object_t *o)
+{
+    return ici_crc(UUID_PRIME, (unsigned char *)&uuidof(o)->u_uuid, sizeof (uuid_t));
+}
+
+static int
+cmp_uuid(object_t *a, object_t *b)
+{
+    return uuid_compare(uuidof(a)->u_uuid, uuidof(b)->u_uuid);
+}
+
 static type_t
 ici_uuid_type =
 {
     mark_uuid,
     free_uuid,
-    ici_hash_unique,
-    ici_cmp_unique,
+    hash_uuid,
+    cmp_uuid,
     ici_copy_simple,
     ici_assign_fail,
     ici_fetch_fail,
     "uuid"
 };
 
-inline static int
-isuuid(object_t *o)
-{
-    return ici_typeof(o) == &ici_uuid_type;
-}
-
 static ici_uuid_t *
 new_uuid(uuid_t uuid)
 {
     ici_uuid_t	*u;
+    ici_uuid_t  proto;
 
-    if ((u = ici_talloc(ici_uuid_t)) != NULL)
+    ICI_OBJ_SET_TFNZ(&proto, uuid_tcode, 0, 1, sizeof (ici_uuid_t));
+    memcpy(proto.u_uuid, uuid, sizeof (uuid_t));
+    u = (ici_uuid_t *)ici_atom_probe(objof(&proto));
+    if (u != NULL)
     {
-        ICI_OBJ_SET_TFNZ(u, uuid_tcode, 0, 1, sizeof *u);
-	ici_rego(u);
-	memcpy(u->u_uid, uuid, sizeof uuid);
+        ici_incref(u);
+        return u;
     }
-    return u;
+    if ((u = ici_talloc(ici_uuid_t)) == NULL)
+        return NULL;
+    *u = proto;
+    ici_rego(u);
+    return (ici_uuid_t *)ici_atom(objof(u), 1);
 }
 
-static int
-ici_uuid_clear(void)
-{
-    ici_uuid_t	*u;
-
-    if (ici_typecheck("o", &u))
-	return 1;
-    if (!isuuid(objof(u)))
-	return ici_argerror(0);
-    uuid_clear(u->u_uid);
-    return ici_null_ret();
-}
-
-static int
-ici_uuid_compare(void)
-{
-    ici_uuid_t	*u;
-    ici_uuid_t	*v;
-
-    if (ici_typecheck("oo", &u, &v))
-	return 1;
-    if (!isuuid(objof(u)))
-	return ici_argerror(0);
-    if (!isuuid(objof(v)))
-	return ici_argerror(1);
-    return ici_int_ret(uuid_compare(u->u_uid, v->u_uid));
-}
-
-static int
-ici_uuid_copy(void)
-{
-    ici_uuid_t	*u;
-    uuid_t	uu2;
-
-    if (ici_typecheck("o", &u))
-	return 1;
-    if (!isuuid(objof(u)))
-	return ici_argerror(0);
-    uuid_copy(u->u_uid, uu2);
-    return ici_ret_with_decref(objof(new_uuid(uu2)));
-}
-
+/*
+ * uuid = uuid.generate()  - generate a new UUID
+ *
+ * Generate a UUID using either uuid.generate_random() or
+ * uuid.generate_time() according to the availability of a
+ * source of "good" random numbers. If the system provides
+ * a source of cryptographic-grade randomness this function
+ * is equivilent to uuid.generate_random() otherwise it is
+ * equivilent to uuid.generate_time().
+ *
+ * This --topic-- forms part of the --ici-uuid-- documentation.
+ */
 static int
 ici_uuid_generate(void)
 {
@@ -114,6 +121,16 @@ ici_uuid_generate(void)
     return ici_ret_with_decref(objof(new_uuid(uu)));
 }
 
+/*
+ * uuid = uuid.generate_random() - generate a "random" UUID
+ *
+ * Generate a UUID using random numbers for the time fields. If
+ * the system does not provide a "good" source of randomness
+ * the C library random number generator is used to generate
+ * random bytes.
+ *
+ * This --topic-- forms part of the --ici-uuid-- documentation
+ */
 static int
 ici_uuid_generate_random(void)
 {
@@ -123,6 +140,14 @@ ici_uuid_generate_random(void)
     return ici_ret_with_decref(objof(new_uuid(uu)));
 }
 
+/*
+ * uuid = uuid.generate_time() - generate a "time" UUID
+ *
+ * Generate a `conventional' UUID that uses the system time
+ * in the UUID's time fields.
+ *
+ * This --topic-- forms part of the --ici-uuid-- documentation.
+ */
 static int
 ici_uuid_generate_time(void)
 {
@@ -132,18 +157,15 @@ ici_uuid_generate_time(void)
     return ici_ret_with_decref(objof(new_uuid(uu)));
 }
 
-static int
-ici_uuid_is_null(void)
-{
-    ici_uuid_t	*u;
-
-    if (ici_typecheck("o", &u))
-	return 1;
-    if (!isuuid(objof(u)))
-	return ici_argerror(0);
-    return ici_int_ret(uuid_is_null(u->u_uid));
-}
-
+/*
+ * uuid = uuid.parse(string) - create a UUID from its string represenation
+ *
+ * Given a string representation of a UUID, as created by uuid.unparse(),
+ * this returns the associated uuid object. See uuid.unparse() for details
+ * of the string representation.
+ *
+ * This --topic-- forms part of the --ici-uuid-- documentation.
+ */
 static int
 ici_uuid_parse(void)
 {
@@ -160,6 +182,23 @@ ici_uuid_parse(void)
     return ici_ret_with_decref(objof(new_uuid(uu)));
 }
 
+/*
+ * string = uuid.unparse(uuid) - convert a UUID to its string representation
+ *
+ * UUIDs have a well defined internal structure and corresponding string
+ * representation. This function converts a UUID to its string value.
+ * UUID strings are of the form:
+ *
+ * tttttttt-tttt-tttv-cccc-nnnnnnnnnn
+ *
+ * Where `t' represents a, hexadecimal, digit that is part of the UUID's
+ * time value, `v' represents a digit that contains version information
+ * (and time, the version field is only 4-bits), `c' is a sequence number
+ * used to overcome clocks with too low a precision and `n' represents a
+ * portion of the system's `node' address (Ethernet address).
+ *
+ * This --topic-- forms part of the --ici-uuid-- documentation.
+ */
 static int
 ici_uuid_unparse(void)
 {
@@ -170,10 +209,19 @@ ici_uuid_unparse(void)
 	return 1;
     if (!isuuid(objof(u)))
 	return ici_argerror(0);
-    uuid_unparse(u->u_uid, mybuf);
+    uuid_unparse(u->u_uuid, mybuf);
     return ici_str_ret(mybuf);
 }
 
+/*
+ * int = uuid.time(uuid) - return the time portion of a UUID
+ *
+ * This function returns the time stored within a UUID converted
+ * to the local system time.  This is likely only to be valid 
+ * if the UUID's type is uuid.TYPE_TIME.
+ *
+ * This --topic-- forms part of the --ici-uuid-- documentation.
+ */
 static int
 ici_uuid_time(void)
 {
@@ -184,9 +232,18 @@ ici_uuid_time(void)
 	return 1;
     if (!isuuid(objof(u)))
 	return ici_argerror(0);
-    return ici_int_ret(uuid_time(u->u_uid, NULL));
+    return ici_int_ret(uuid_time(u->u_uuid, NULL));
 }
 
+/*
+ * int = uuid.type(uuid) - return the type of a UUID
+ *
+ * UUIDs specify a `type' that specifies how the UUID
+ * was generated. The types are defined in the section
+ * `UUID Types' above.
+ *
+ * This --topic-- forms part of the --ici-uuid-- documentation.
+ */
 static int
 ici_uuid_typef(void)
 {
@@ -196,9 +253,18 @@ ici_uuid_typef(void)
 	return 1;
     if (!isuuid(objof(u)))
 	return ici_argerror(0);
-    return ici_int_ret(uuid_type(u->u_uid));
+    return ici_int_ret(uuid_type(u->u_uuid));
 }
 
+/*
+ * int = uuid.variant(uuid) - return the variant of a UUID
+ *
+ * Returns the variant of a UUID as an integer. This will be
+ * one of the four values defined in the `UUID Variants'
+ * section above.
+ *
+ * This --topic-- forms part of the --ici-uuid-- documentation.
+ */
 static int
 ici_uuid_variant(void)
 {
@@ -208,18 +274,14 @@ ici_uuid_variant(void)
 	return 1;
     if (!isuuid(objof(u)))
 	return ici_argerror(0);
-    return ici_int_ret(uuid_variant(u->u_uid));
+    return ici_int_ret(uuid_variant(u->u_uuid));
 }
 
 static cfunc_t ici_uuid_cfuncs[] =
 {
-    {CF_OBJ, "clear", ici_uuid_clear},
-    {CF_OBJ, "compare", ici_uuid_compare},
-    {CF_OBJ, "copy", ici_uuid_copy},
     {CF_OBJ, "generate", ici_uuid_generate},
     {CF_OBJ, "generate_random", ici_uuid_generate_random},
     {CF_OBJ, "generate_time", ici_uuid_generate_time},
-    {CF_OBJ, "is_null", ici_uuid_is_null},
     {CF_OBJ, "parse", ici_uuid_parse},
     {CF_OBJ, "unparse", ici_uuid_unparse},
     {CF_OBJ, "time", ici_uuid_time},
